src/assets/style.css
:root {
	--main-bg-color: #f0f1f2;
	--main-fg-color: #343a40;
	--card-bg-color: #fcfeff;
	--card-fg-color: #343a40;
	--primary-accent-col-1: #f27059;
	--primary-accent-col-2: #ff9770;
	--secondary-accent-col-1: #212529;
	--secondary-accent-col-2: #212529;
	--primary-accent-gradient: linear-gradient(45deg, var(--primary-accent-col-1), var(--primary-accent-col-2));
	--secondary-accent-gradient: linear-gradient(45deg, var(--secondary-accent-col-1), var(--secondary-accent-col-2));
	--background-size: 100%;
}


input[type=number] {
	padding: 8px;
	max-width: 30%;
	border: 1px double var(--secondary-accent-col-1);
	border-radius: 2px;
	transition: 0.5s;
	color: #8d8d8d;
}

input[type=number]:focus {
	border: 1px double var(--primary-accent-col-1);
	color: var(--card-fg-color);
	outline: none;
}

body {
	background-color: var(--main-bg-color);
	color: var(--main-fg-color);
}


.logo {
	display: flex;
	justify-content: center;
	padding: 16px;
}

.card {
	background-color: var(--card-bg-color);
	border-radius: 12px;
	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
	color: var(--card-fg-color);
	display: flex;
	flex-direction: column;
	margin: 16px;
	padding: 16px;
	overflow: hidden;
}

.card__content {
	margin: 16px;
	padding: 12px;
	border-radius: 4px;
	border: 1px double var(--secondary-accent-col-1);
	display: flex;
	justify-content: space-between;
}

.big-button {
	background: var(--primary-accent-gradient);
	background-size: var(--background-size);
	border-radius: 4px;
	/* border: 1px solid var(--primary-accent-col-1); */
	color: var(--card-bg-color);
	cursor: pointer;
	margin: 16px;
	padding: 16px;
	text-align: center;
	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
}

.wrapper {
	overflow: hidden;
	transition: max-height 0.2s ease-in-out;
	height: auto;
}

.wrapper.closed {
	max-height: 0px;
}

.wrapper.open {
	max-height: 600px;
}

.chip {
	background-color: #495057;
	border-radius: 4px;
	color: #fff;
	font-size: var(--font-size-base);
	margin: 6px;
	padding: 10px 10px;
	text-align: center;
}

.chip--45 {
	background-color: #e94f37;
}

.chip--35 {
	background-color: #2681D1;
}

.chip--25 {
	background-color: #ffbd00;
}

.chip--10 {
	background-color: #0ead69;
}

.chip--5 {
	background-color: #fe7f2d;
}

.chip--2_5 {
	background-color: #7d8597;
}

.tab__container {
	color: var(--card-bg-color);
	display: flex;
	font-family: "Roboto Condensed", sans-serif;
	justify-content: space-evenly;
	text-align: center;
}

.tab {
	background: var(--primary-accent-gradient);
	background-size: var(--background-size);
	border-radius: 6px;
	box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
	color: var(--card-bg-color);
	cursor: pointer;
	flex: 1;
	margin: 8px 8px;
	padding: 4px 4px;
}

.tab:first-of-type {
	margin-left: 4px;
}

.tab:last-of-type {
	margin-right: 4px;
}

.tab--selected {
	background: var(--secondary-accent-gradient);
	color: var(--card-bg-color);
}



/*=============================================
  =            Horizontal Scroll            =
=============================================*/

.horizontal-scroll__container {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 8px 8px;
	/* background-color: var(--primary-accent-col-2); */
	/* border-bottom: 4px solid var(--primary-accent-col-1); */
	margin-top: 32px;
	margin-bottom: 16px;

}

.horizontal-scroll__button {
	align-items: center;
	background: var(--primary-accent-gradient);
	background-size: var(--background-size);
	border-radius: 64px;
	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
	color: var(--card-bg-color);
	cursor: pointer;
	display: flex;
	height: 64px;
	justify-content: center;
	line-height: 64px;
	margin: 8px;
	max-height: 64px;
	max-width: 64px;
	min-height: 64px;
	min-width: 64px;
	width: 64px;
}

.horizontal-scroll__button__svg {
	width: 60%;
	height: 60%;
}

.horizontal-scroll__item {
	font-size: var(--font-size-md);
	font-weight: 400;
	background: var(--secondary-accent-gradient);
	color: var(--card-bg-color);
	border-radius: 64px;
	height: 64px;
	line-height: 64px;
	padding: 0px 28px;
	/* box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px; */
	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
}


/*=============================================
		=            Table            =
=============================================*/

.table__container {
	font-family: 'Roboto', sans-serif;
	background-color: var(--card-bg-color);
	border-radius: 4px;
	/* border                 : 2px solid var(--secondary-accent-col-1); */
	/* border-top             : none; */
	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;

	color: var(--card-fg-color);
	display: flex;
	flex-direction: column;
	margin: 16px 16px;
	overflow: hidden;
}

.row {
	display: flex;
	background-color: var(--card-bg-color);
	/* padding: 8px; */
	border-bottom: 1px solid #343a401f;
	/* box-shadow   : rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px; */
}

.row>.cell:nth-child(1) {
	flex-basis: 20%;
}
.border-right {
	border-right: 1px solid #343a401f;
}

.border-right--darker {
	border-right: 1px solid #343a40;
}

.row>.cell:nth-child(2) {
	/* background-color: #343a400f; */
	flex-basis: 15%;
}

.row>.cell:nth-child(3) {
	/* background-color: #343a400f; */
	flex-basis: 50%;
	/* justify-content: space-between; */
}

.row>.cell:nth-child(4) {
	flex-basis: 15%;
	/* border-left: 1px solid #343a401f; */
}

.bg-darker {
	background-color: #343a400f;
}

.cell {
	padding: 4px;
	text-align: center;
	overflow-y: auto;
	overscroll-behavior-x: contain;
	scroll-snap-type: x mandatory;
}

.row--heading {
	box-shadow: none;
	background: var(--secondary-accent-gradient);
	color: var(--card-bg-color);
	font-family: 'Roboto Condensed', sans-serif;
	font-size: var(--font-size-md);
	border-radius: 0px;
	padding: 8px 0px;
}

.text-align-left {
	text-align: left;
}

